# tsq

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  python-publish.yml
examples/air_quality/: air_quality_data_card.html  air_quality_data_card.ipynb  air_quality_data_card.json
examples/dummy/: data_card.html  data_card.json  data_card.tex
examples/finance/: apple_data_card.html  multi_data_card.html  y_finance_data_card.ipynb
tsq.egg-info/: PKG-INFO  SOURCES.txt
tsq_lib.egg-info/: PKG-INFO
