[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsq-lib"
version = "0.2.1"
description = "time series quality library"
authors = [
    { name = "Mathis Jander", email = "mathis.jander@utwente.nl" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
